--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: blktap
 Section: libs
 Priority: extra
 Maintainer: Chrysostomos Nanakos <cnanakos@grnet.gr>
-Build-Depends: debhelper (>= 8), autotools-dev, uuid-dev, libaio-dev, libtool, autoconf, automake, libxseg-dev
+Build-Depends: debhelper (>= 8), autotools-dev, uuid-dev, libaio-dev, libtool,
+ autoconf, automake, libxseg-dev(>=0.3), libxseg-dev(<<0.4)
 Standards-Version: 3.9.5
 Vcs-Browser: http://git.debian.org/?p=pkg-xen/blktap.git
 Vcs-Git: http://git.debian.org/git/pkg-xen/blktap.git
@@ -37,7 +38,9 @@ Description: Xen API blktap shared library (development files)
 Package: blktap-utils
 Section: utils
 Architecture: i386 amd64
-Depends: ${misc:Depends}, ${shlibs:Depends}, libvhd0 (= ${binary:Version}), libvhdio-2.0.90 (= ${binary:Version}), libblktapctl0 (= ${binary:Version}), blktap-dkms
+Depends: ${misc:Depends}, ${shlibs:Depends}, libvhd0 (= ${binary:Version}),
+ libvhdio-2.0.90 (= ${binary:Version}), libblktapctl0 (= ${binary:Version}),
+ blktap-dkms, libxseg0(>=0.3), libxseg0(<<0.4), archipelago-protocol1
 Description: utilities to work with VHD disk images files
  The Xen Cloud Platform (XCP) is an open source enterprise-ready server
  virtualization and cloud computing platform, delivering the Xen Hypervisor
