--- a/drivers/Makefile.am
+++ b/drivers/Makefile.am
@@ -78,6 +78,7 @@ libtapdisk_la_SOURCES += block-vindex.c
 libtapdisk_la_SOURCES += block-lcache.c
 libtapdisk_la_SOURCES += block-llcache.c
 libtapdisk_la_SOURCES += block-archipelago.c
+libtapdisk_la_SOURCES += block-pithos.c
 
 libtapdisk_la_LIBADD  = ../vhd/lib/libvhd.la
 libtapdisk_la_LIBADD += -laio -lxseg
