devflow: Bump version to 2.1rc1
Rename package from blktap to blktap-archipelago to resolve
conflicts with the current blktap package that Debian ships.

--- a/devflow.conf
+++ b/devflow.conf
@@ -1,13 +1,13 @@
 [ packages ]
-  [[ blktap ]]
+  [[ blktap-archipelago ]]
     version_file = ""
-  [[ blktap-dev ]]
+  [[ blktap-archipelago-dev ]]
     version_file = ""
-  [[ blktap-utils ]]
+  [[ blktap-archipelago-utils ]]
     version_file = ""
-  [[ libvhd0 ]]
+  [[ libvhd0-archipelago ]]
     version_file = ""
-  [[ libvhd0-2.0.90 ]]
+  [[ libvhd0-archipelago-2.1rc1 ]]
     version_file = ""
-  [[ libblktapctl0 ]]
+  [[ libblktapctl0-archipelago ]]
     version_file = ""
