--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: libs
 Priority: extra
 Maintainer: Chrysostomos Nanakos <cnanakos@grnet.gr>
 Build-Depends: debhelper (>= 8), autotools-dev, uuid-dev, libaio-dev, libtool,
- autoconf, automake, libxseg-dev(>>0.4~rc1)
+ autoconf, automake, libxseg-dev(>=0.4)
 Conflicts: blktap
 Replaces: blktap
 Standards-Version: 3.9.5
@@ -46,7 +46,7 @@ Depends: ${misc:Depends}, ${shlibs:Depends},
  libvhd0-archipelago (= ${binary:Version}),
  libvhdio-archipelago-2.1rc1 (= ${binary:Version}),
  libblktapctl0-archipelago (= ${binary:Version}),
- blktap-dkms|blktap-dkms-bin, libxseg0(>>0.4~rc1), archipelago-protocol1
+ blktap-dkms|blktap-dkms-bin, libxseg0(>=0.4), archipelago-protocol1
 Conflicts: blktap-utils
 Replaces: blktap-utils
 Description: utilities to work with VHD disk images files
