devflow: Fix broken build
Signed-off-by: Chrysostomos Nanakos <cnanakos@grnet.gr>

--- a/devflow.conf
+++ b/devflow.conf
@@ -7,7 +7,7 @@
     version_file = ""
   [[ libvhd0-archipelago ]]
     version_file = ""
-  [[ libvhd0-archipelago-2.1rc1 ]]
+  [[ libvhd0-archipelago-2.1next ]]
     version_file = ""
   [[ libblktapctl0-archipelago ]]
     version_file = ""
