Fix devflow build system
Make devflow-update-version directly update version.m4

--- a/devflow.conf
+++ b/devflow.conf
@@ -1,13 +1,4 @@
 [ packages ]
   [[ blktap-archipelago ]]
-    version_file = ""
-  [[ blktap-archipelago-dev ]]
-    version_file = ""
-  [[ blktap-archipelago-utils ]]
-    version_file = ""
-  [[ libvhd0-archipelago ]]
-    version_file = ""
-  [[ libvhd0-archipelago-2.1rc1 ]]
-    version_file = ""
-  [[ libblktapctl0-archipelago ]]
-    version_file = ""
+    version_file = "version.m4"
+    version_template = "version_template"
